flux/apps/cluster1/restreamer/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: restreamer
subsets:
- addresses:
  - ip: 192.168.0.145
  ports:
  - port: 12080
    name: http
