flux/apps/cluster1/restreamer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restreamer
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,192.168.0.0/16"
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    ingress.cluster.local/probe: "false"
spec:
  tls:
  - hosts:
    - restreamer.home.wugi.info
    secretName: restreamer-ingress-certs
  ingressClassName: nginx
  rules:
  - host: restreamer.home.wugi.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: restreamer
            port:
              number: 80
